Fixed the issue with Event tile on hover getting cropped from left and top side. Fixed the issue with Event tile on hover should apply to only events that are in future only.

--- a/src/components/Event/event.module.css
+++ b/src/components/Event/event.module.css
@@ -5,7 +5,7 @@
   margin-bottom: 20px;
   transition: all 0.2s ease-in;
 }
-.eventWrapper:hover {
+.eventWrapper:not(.hideLightening):hover {
   -webkit-box-shadow: 0px 0px 10px 1px rgba(214, 214, 214, 0.3);
   -moz-box-shadow: 0px 0px 10px 1px rgba(214, 214, 214, 0.3);
   box-shadow: 0px 0px 10px 1px rgba(214, 214, 214, 0.3);
@@ -70,7 +70,7 @@
   /* backdrop-filter: blur(16px); */
   color: #e8e8e8 !important;
   z-index: 200;
-  padding: 0.75rem 1.5rem !important;
+  padding: 0.75rem 1rem !important;
   opacity: 0;
   transition: opacity 0.2s ease-in-out;
 }
